@@ -5,9 +5,9 @@
 <li>Han-Wen Nienhuys and Jan Nieuwenhuizen, core development
 <p>
 Jan is currently working as a programmer developing
-web-applications. Jan plays the viola. Han-Wen is working as a
-consultant in advanced planning and scheduling. In the remaining time,
-he tries to master the French Horn.
+web-applications. Jan plays the viola. Han-Wen is setting up a company
+in LilyPond support. In the remaining time, he tries to master the
+French Horn.
 <p>
 
 <li>Graham Percival, documentation editor
